non-linear elastic solid jac of internal forces implemented

--- a/6_3d_non_linear_elastic_solid.ipynb
+++ b/6_3d_non_linear_elastic_solid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +94,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1174, 1173, 1115]\n",
+      "[1174, 1173, 1176]\n",
+      "[1174, 1115, 1176]\n",
+      "[1173, 1115, 1176]\n",
+      "\n",
+      "[1174, 1175, 1177]\n",
+      "[1174, 1175, 1176]\n",
+      "[1174, 1177, 1176]\n",
+      "[1175, 1177, 1176]\n",
+      "\n",
+      "[1174, 1176, 1177]\n",
+      "[1174, 1176, 1173]\n",
+      "[1174, 1177, 1173]\n",
+      "[1176, 1177, 1173]\n",
+      "\n",
+      "[1174, 1115, 1192]\n",
+      "[1174, 1115, 1176]\n",
+      "[1174, 1192, 1176]\n",
+      "[1115, 1192, 1176]\n",
+      "\n",
+      "[1174, 1251, 1175]\n",
+      "[1174, 1251, 1176]\n",
+      "[1174, 1175, 1176]\n",
+      "[1251, 1175, 1176]\n",
+      "\n",
+      "[1174, 1176, 1192]\n",
+      "[1174, 1176, 1251]\n",
+      "[1174, 1192, 1251]\n",
+      "[1176, 1192, 1251]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Read the mesh and find the points and faces located on the boundary\n",
     "\n",
@@ -133,6 +170,14 @@
     "    face_1 = [cell_pts[0], cell_pts[1], cell_pts[3]]\n",
     "    face_2 = [cell_pts[0], cell_pts[2], cell_pts[3]]\n",
     "    face_3 = [cell_pts[1], cell_pts[2], cell_pts[3]]\n",
+    "\n",
+    "    if (1174 in [cell_pts[0], cell_pts[1], cell_pts[2], cell_pts[3]]) and (1176 in [cell_pts[0], cell_pts[1], cell_pts[2], cell_pts[3]]):\n",
+    "        print(face_0)\n",
+    "        print(face_1)\n",
+    "        print(face_2)\n",
+    "        print(face_3)\n",
+    "        print()\n",
+    "\n",
     "\n",
     "    #Create the faces\n",
     "    face_0 = Face(face_0, cell_id)\n",
@@ -188,6 +233,36 @@
     "boundary_points = np.unique(face_ar[boundary_faces_idx].flatten())\n",
     "boundary_point_mask = np.zeros(n_vertices, dtype=bool)\n",
     "boundary_point_mask[boundary_points] = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[154, 155, 166, 167, 576, 582]\n",
+      "[[1225 1226 1228 1227]\n",
+      " [1225 1227 1228 1224]\n",
+      " [1232 1231 1095 1185]\n",
+      " [1233 1234 1185 1134]\n",
+      " [1187 1294 1371 1293]\n",
+      " [ 722  723 1211 1372]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "selected_faces = []\n",
+    "\n",
+    "for i, face in enumerate(face_ar):\n",
+    "    if 1174 in face and 1176 in face:\n",
+    "        selected_faces.append(i)\n",
+    "\n",
+    "print(selected_faces)\n",
+    "print(cell_ar[selected_faces])"
    ]
   },
   {
@@ -380,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,18 +699,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-2.24146692e-02 -2.24146692e-02  2.13747069e-02 ...  1.33573708e-16\n",
-      "  5.37764278e-17 -4.89192020e-16]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create the strain density energy function of a compressible Neo-Hookean material\n",
     "\n",
@@ -703,13 +769,12 @@
     "    C1 = 1, \n",
     "    C2 = 1\n",
     ")\n",
-    "\n",
-    "print(internal_forces)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,51 +783,17 @@
     "# is very sparse and too large to fit in memory for most meshes.\n",
     "\n",
     "\n",
-    "# This first naive implementation took 15 minutes to compute the Jacobian matrix for \n",
-    "# a mesh with ~2000 vertices.\n",
-    "def compute_sparse_jacobian_naive(f, x, sparsity_pattern):\n",
-    "    \"\"\"\n",
-    "    Compute the sparse Jacobian of f at x given a known sparsity pattern.\n",
-    "    \n",
-    "    Args:\n",
-    "        f: Function whose Jacobian is to be computed.\n",
-    "        x: Point at which to compute the Jacobian.\n",
-    "        sparsity_pattern: Sparse matrix indicating the structure of the Jacobian.\n",
-    "    \n",
-    "    Returns:\n",
-    "        A sparse matrix (CSR format) representing the Jacobian.\n",
-    "    \"\"\"\n",
-    "    # Get sparsity structure\n",
-    "    row_indices, col_indices = sparsity_pattern.nonzero()\n",
-    "    \n",
-    "    # Compute each nonzero element of the Jacobian\n",
-    "    values = []\n",
-    "    for i, j in tqdm(zip(row_indices, col_indices), total=len(row_indices)):\n",
-    "        # Create a standard basis vector e_j\n",
-    "        e_j = jnp.zeros_like(x)\n",
-    "        e_j = e_j.at[j].set(1.0)\n",
-    "        \n",
-    "        # Compute J[i, j] using JVP\n",
-    "        _, J_row = jax.jvp(f, (x,), (e_j,))\n",
-    "        values.append(J_row[i])\n",
-    "    \n",
-    "    # Create a sparse Jacobian matrix\n",
-    "    return csc_matrix((values, (row_indices, col_indices)), shape=(len(f(x)), len(x)))\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "# We need to know the sparsity pattern of the Jacobian matrix of the internal forces. \n",
     "# If 2 nodes are connected by an edge, then their positions affect the elastic forces applied \n",
     "# to each other. This means that the Jacobian matrix is non-zero at the positions corresponding\n",
     "# the indices of the 2 nodes connected by an edge. \n",
-    "\n",
     "edge_ar = np.vstack(\n",
     "    [\n",
     "        face_ar[:, [0, 1]],\n",
     "        face_ar[:, [1, 2]],\n",
-    "        face_ar[:, [2, 1]],\n",
+    "        face_ar[:, [2, 0]],\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -825,12 +856,6 @@
     "sparsity_pattern = csc_matrix((data, (row_id, col_id)), shape=(n_vertices*3, n_vertices*3))\n",
     "\n",
     "\n",
-    "# Compute the sparse Jacobian of the internal forces\n",
-    "#jac_internal_forces = compute_sparse_jacobian_naive(\n",
-    "#    partial(internal_forces_func, ref_point_ar=point_ar, ref_volume_ar=ref_volume_ar, D=D, C1=1, C2=1),\n",
-    "#    u_ar,\n",
-    "#    adjacency_matrix\n",
-    "#)\n",
     "\n",
     "\n",
     "\n",
@@ -842,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,32 +915,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Constructing Sparse Jacobian: 100%|██████████| 93/93 [00:02<00:00, 42.05it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building the sparse Jacobian matrix\n"
+      "Constructing Sparse Jacobian: 100%|██████████| 97/97 [00:02<00:00, 34.67it/s]\n"
      ]
     }
    ],
    "source": [
-    "# We can optimize the computation of the Jacobian by obtaining collecting the entries \n",
+    "# We can optimize the computation of the Jacobian by collecting the entries \n",
     "# of the Jacobian matrix for several nodes at once. This way we can compute the Jacobian\n",
     "# with fewer calls to the jax.jvp function. The trick is to sum the column vectors \n",
     "# where there is no entry on the same row. After summing the column vectors, we already \n",
     "# know from the sparsity pattern to which column the entry at each row corresponds.\n",
     "\n",
-    "def compute_sparse_jacobian_optimized(f, x, sparsity_pattern, color_vertex_dic):\n",
+    "def compute_sparse_jacobian(f, x, sparsity_pattern, color_vertex_dic):\n",
     "    \"\"\"\n",
     "    Compute the sparse Jacobian of f at x given a known sparsity pattern.\n",
     "    \n",
@@ -923,6 +941,7 @@
     "        f: Function whose Jacobian is to be computed.\n",
     "        x: Point at which to compute the Jacobian.\n",
     "        sparsity_pattern: Sparse matrix indicating the structure of the Jacobian.\n",
+    "        color_vertex_dic: Dictionary where keys are colors and values are arrays of vertices.\n",
     "    \n",
     "    Returns:\n",
     "        A sparse matrix (CSR format) representing the Jacobian.\n",
@@ -939,18 +958,22 @@
     "        # Create a vector of zeros\n",
     "        e_j = jnp.zeros_like(x)\n",
     "\n",
-    "        # Set the values of the vector to 1 at the positions corresponding to the vertices\n",
+    "        # Set the values of the vector to 1 at the positions corresponding to the selected columns\n",
     "        e_j = e_j.at[selected_col_id_ar].set(1.0)\n",
     "\n",
     "        # Compute the Jacobian vector product \n",
     "        _, summed_cols_vector = jax.jvp(f, (x,), (e_j,))\n",
     "\n",
-    "        # Now the trick is to find for each row of summed_col_vectors the index of the column where the entry is located in the Jacobian matrix\n",
+    "        # Now the trick is to find for each row of summed_cols_vector the index of the column where the entry is located in the Jacobian matrix\n",
+    "\n",
     "        # Start making all columns in the adjacency matrix zero except for the selected columns\n",
     "        diag_matrix = diags(np.array(e_j), format='csc')\n",
     "        adjacency_matrix_subset =  sparsity_pattern.dot(diag_matrix)\n",
     "\n",
-    "        # Extract the indices non-zero entries of this subset of the adjacency matrix\n",
+    "        #Small check to make sure that per row, there is at maximum one column with a non-zero entry\n",
+    "        assert np.all(adjacency_matrix_subset.sum(axis=1) <= 1)\n",
+    "\n",
+    "        # Extract the indices of the non-zero entries of this subset of the adjacency matrix\n",
     "        subset_row_indices, subset_col_indices = adjacency_matrix_subset.nonzero()\n",
     "\n",
     "        # The row indices of the Jacobian matrix are the same as the row indices of the adjacency matrix\n",
@@ -963,15 +986,13 @@
     "    return csc_matrix((jacobian_data_lst, (jacobian_row_id_lst, jacobian_col_id_lst)), shape=(len(f(x)), len(x)))\n",
     "\n",
     "\n",
-    "jac_internal_forces_optimized = compute_sparse_jacobian_optimized(\n",
+    "jac_internal_forces_optimized = compute_sparse_jacobian(\n",
     "    partial(internal_forces_func, ref_point_ar=point_ar, ref_volume_ar=ref_volume_ar, D=D, C1=1, C2=1),\n",
     "    u_ar,\n",
     "    sparsity_pattern,\n",
     "    color_vertex_dic\n",
     ")\n",
     "\n",
-    "\n",
-    "    \n",
     "\n"
    ]
   }
