Corrected several mistakes in non liner simulation

--- a/6_3d_non_linear_elastic_solid.ipynb
+++ b/6_3d_non_linear_elastic_solid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,15 +412,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compute the T and D matrices for all the tetrhedra in the mesh\n",
-    "x0_ar = point_ar[cell_ar[:, 0]]\n",
-    "x1_ar = point_ar[cell_ar[:, 1]]\n",
-    "x2_ar = point_ar[cell_ar[:, 2]]\n",
-    "x3_ar = point_ar[cell_ar[:, 3]]\n",
+    "x0_ar = ref_point_ar[cell_ar[:, 0]]\n",
+    "x1_ar = ref_point_ar[cell_ar[:, 1]]\n",
+    "x2_ar = ref_point_ar[cell_ar[:, 2]]\n",
+    "x3_ar = ref_point_ar[cell_ar[:, 3]]\n",
     "\n",
     "#Compute the T matrix for all the tetrahedra\n",
     "T = np.column_stack([x1_ar - x0_ar, x2_ar - x0_ar, x3_ar - x0_ar]).reshape(-1, 3, 3)\n",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
     "def test_D_matrix(D): \n",
     "\n",
     "    # Create virtual deformed point coordinates\n",
-    "    def_point_ar = point_ar * np.array([2, 1, 1])\n",
+    "    def_point_ar = ref_point_ar * np.array([2, 1, 1])\n",
     "\n",
     "    # Get the point coordinates of the cells\n",
     "    def_x0_ar = def_point_ar[cell_ar[:, 0]]\n",
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,10 +572,10 @@
     "\n",
     "\n",
     "# For each tetrahedron we need to compute the jacobian that maps the element coordinates to the reference coordinates\n",
-    "p0_ar = point_ar[cell_ar[:, 0]]\n",
-    "p1_ar = point_ar[cell_ar[:, 1]]\n",
-    "p2_ar = point_ar[cell_ar[:, 2]]\n",
-    "p3_ar = point_ar[cell_ar[:, 3]]\n",
+    "p0_ar = ref_point_ar[cell_ar[:, 0]]\n",
+    "p1_ar = ref_point_ar[cell_ar[:, 1]]\n",
+    "p2_ar = ref_point_ar[cell_ar[:, 2]]\n",
+    "p3_ar = ref_point_ar[cell_ar[:, 3]]\n",
     "jacobian_ar = np.column_stack([p0_ar - p3_ar, p1_ar - p3_ar, p2_ar - p3_ar]).reshape(-1, 3, 3)\n",
     "\n",
     "#Compute the determinant of each Jacobian matrix\n",
@@ -644,10 +644,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# The parameters of the compressible Neo-Hookean material\n",
+    "C1 = 1e6 # 1MPa Shear modulus\n",
+    "C2 = 100e6 # 100MPa Bulk modulus\n",
+    "\n",
+    "\n",
     "# Create the strain density energy function of a compressible Neo-Hookean material\n",
     "#-----------------------------------------------------------------------------------\n",
     "@partial(jax.jit, static_argnums=(4, 5))\n",
@@ -656,8 +662,8 @@
     "        ref_point_ar, \n",
     "        ref_volume_ar, \n",
     "        D, \n",
-    "        C1 = 1, \n",
-    "        C2 = 1\n",
+    "        C1, \n",
+    "        C2\n",
     "    ):\n",
     "\n",
     "    # Compute the point coordinates in the deformed configuration\n",
@@ -672,7 +678,7 @@
     "    C_ar = jnp.matmul(F_T_ar, F_ar)\n",
     "\n",
     "    # Compute the invariants of the right Cauchy-Green tensor\n",
-    "    J_ar = jnp.linalg.det(F_ar)\n",
+    "    J_ar = jnp.abs(jnp.linalg.det(F_ar))\n",
     "    I1_ar = jnp.trace(C_ar, axis1=1, axis2=2)\n",
     "\n",
     "    # Compute the strain density energy function of each cell\n",
@@ -685,24 +691,26 @@
     "    return np.sum(E)\n",
     "#-----------------------------------------------------------------------------------\n",
     "\n",
-    "# Create a dummy displacement field\n",
-    "def_point_ar = point_ar * np.array([1, 1, 2])\n",
-    "u_ar = jnp.array(def_point_ar - point_ar).flatten()\n",
     "\n",
     "\n",
     "# Compute the gradient of the strain density energy function with respect to the \n",
     "# displacement field, which corresponds to the internal forces acting on the object\n",
     "grad_density_energy_func = jax.grad(compressible_neo_hookean_strain_density_energy_func, argnums=0)\n",
     "\n",
-    "# The internal forces are given by the negative of the gradient of the strain density energy function\n",
-    "internal_forces_func = lambda u_ar, ref_point_ar, ref_volume_ar, D, C1, C2 : (-1.0) * grad_density_energy_func(\n",
-    "    u_ar,\n",
-    "    ref_point_ar, \n",
-    "    ref_volume_ar, \n",
-    "    D, \n",
-    "    C1 = C1, \n",
-    "    C2 = C2\n",
-    ")"
+    "\n",
+    "\n",
+    "def internal_forces_func(\n",
+    "        u_ar, \n",
+    "        grad_density_energy_func = grad_density_energy_func,\n",
+    "        ref_point_ar = ref_point_ar,\n",
+    "        ref_volume_ar = ref_volume_ar,\n",
+    "        D = D,\n",
+    "        C1 = C1,\n",
+    "        C2 = C2\n",
+    "    ):\n",
+    "    \n",
+    "    return (-1.0) * grad_density_energy_func(u_ar,ref_point_ar = ref_point_ar, ref_volume_ar = ref_volume_ar, D = D, C1 = C1, C2 = C2)\n",
+    "\n"
    ]
   },
   {
@@ -745,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,13 +882,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compute the sparse jacobian matrix of the internal forces\n",
     "\n",
-    "def jac_internal_forces_func(f, x, sparsity_pattern, color_vertex_dic):\n",
+    "def jac_internal_forces_func(\n",
+    "        f, x, sparsity_pattern, color_vertex_dic):\n",
     "    \"\"\"\n",
     "    Compute the sparse Jacobian of f at x given a known sparsity pattern.\n",
     "    \n",
@@ -933,12 +942,7 @@
     "    return csc_matrix((jacobian_data_lst, (jacobian_row_id_lst, jacobian_col_id_lst)), shape=(len(f(x)), len(x)))\n",
     "\n",
     "\n",
-    "jac_internal_forces = jac_internal_forces_func(\n",
-    "    partial(internal_forces_func, ref_point_ar=point_ar, ref_volume_ar=ref_volume_ar, D=D, C1=1, C2=1),\n",
-    "    u_ar,\n",
-    "    sparsity_pattern,\n",
-    "    color_vertex_dic\n",
-    ")\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -1052,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,15 +1100,22 @@
     "        The residuals of the displacement and velocity fields.\n",
     "    \"\"\"\n",
     "\n",
+    "    assert not np.any(np.isnan(u_hat_ar))\n",
+    "    assert not np.any(np.isnan(v_hat_ar))\n",
+    "\n",
     "    F_u_ar = u_hat_ar - u_n_minus_1_ar - time_step * v_hat_ar\n",
-    "    F_v_ar = global_mass_matrix.dot(v_hat_ar - v_n_minus_1_ar) + time_step * internal_forces_func(u_hat_ar, ref_point_ar=point_ar, ref_volume_ar=ref_volume_ar, D=D, C1=1, C2=1)\n",
+    "    F_v_ar = global_mass_matrix.dot(v_hat_ar - v_n_minus_1_ar) + time_step * internal_forces_func(u_hat_ar)\n",
+    "\n",
+    "    F_u_ar = np.nan_to_num(F_u_ar)\n",
+    "    F_v_ar = np.nan_to_num(F_v_ar)\n",
+    "\n",
     "    return F_u_ar, F_v_ar\n",
     "#----------------------------------------------------------------------------------------------------\n",
     "\n",
     "\n",
     "#----------------------------------------------------------------------------------------------------\n",
-    "def compute_newton_raphson_step(\n",
-    "        u_hat_ar, \n",
+    "def compute_newton_raphson_step( \n",
+    "        u_hat_ar,\n",
     "        F_u_ar,\n",
     "        F_v_ar,\n",
     "        time_step,     \n",
@@ -1118,9 +1129,9 @@
     "    Parameters\n",
     "    ----------\n",
     "\n",
-    "    u_hat_ar, v_hat_ar: np.ndarray\n",
-    "        The predicted displacement and velocity fields at the next time step.\n",
-    "    \n",
+    "    u_hat_ar: np.ndarray\n",
+    "        The predicted displacement field at the next time step.\n",
+    "\n",
     "    F_u_ar, F_v_ar: np.ndarray\n",
     "        The residuals of the displacement and velocity fields at u_hat_ar and v_hat_ar.\n",
     "\n",
@@ -1140,11 +1151,15 @@
     "\n",
     "    # Compute the Jacobian of the internal forces wrt the displacement at u_hat\n",
     "    jac_internal_forces = jac_internal_forces_func(\n",
-    "        partial(internal_forces_func, ref_point_ar=point_ar, ref_volume_ar=ref_volume_ar, D=D, C1=1, C2=1),\n",
-    "        u_ar,\n",
+    "        internal_forces_func,\n",
+    "        u_hat_ar,\n",
     "        sparsity_pattern,\n",
     "        color_vertex_dic\n",
     "    )\n",
+    "\n",
+    "    # Check if there are NaN values in the Jacobian matrix\n",
+    "    #if np.any(np.isnan(jac_internal_forces.data)):\n",
+    "    #    raise ValueError(\"The Jacobian matrix contains NaN values.\")\n",
     "\n",
     "    # Start by solving for the delta v\n",
     "    rhs_matrix = global_mass_matrix + (time_step**2) * jac_internal_forces\n",
@@ -1152,6 +1167,7 @@
     "\n",
     "    # Solve for the delta v\n",
     "    delta_v_ar = spsolve(rhs_matrix, lhs_vector)\n",
+    "    delta_v_ar = np.nan_to_num(delta_v_ar)\n",
     "\n",
     "    # Now compute the delta u\n",
     "    delta_u_ar = time_step * delta_v_ar - F_u_ar\n",
@@ -1169,7 +1185,8 @@
     "        internal_forces_func,\n",
     "        jac_internal_forces_func,\n",
     "        global_mass_matrix,\n",
-    "        rtol = 1e-6,\n",
+    "        rtol = 1e-2,\n",
+    "        atol = 1e-12,\n",
     "        max_iter = 100\n",
     "    ):\n",
     "    \"\"\"\n",
@@ -1203,8 +1220,8 @@
     "\n",
     "    # We first need to make a guess of what will be the displacement and velocity fields at the next time step, \n",
     "    # which we denote by u_hat and v_hat. For this we use the forward Euler method:\n",
-    "    u_hat_ar = u_n_minus_1_ar + time_step * v_n_minus_1_ar\n",
-    "    v_hat_ar = v_n_minus_1_ar  # We cannot invert the mass matrix\n",
+    "    u_hat_ar = u_n_minus_1_ar.copy() + time_step * v_n_minus_1_ar\n",
+    "    v_hat_ar = v_n_minus_1_ar.copy()  # We cannot invert the mass matrix\n",
     "\n",
     "    newton_raphson_display_text = display(\"Newton-Raphson step: 0\", display_id=True)\n",
     "\n",
@@ -1227,7 +1244,7 @@
     "\n",
     "        # Compute the Newton-Raphson step\n",
     "        delta_u_ar, delta_v_ar = compute_newton_raphson_step(\n",
-    "            u_hat_ar, \n",
+    "            u_hat_ar,\n",
     "            F_u_ar,\n",
     "            F_v_ar,\n",
     "            time_step,    \n",
@@ -1237,24 +1254,25 @@
     "        )\n",
     "\n",
     "        # If the increment is small enough, we can stop\n",
-    "        u_rel_diff = np.nanmax(delta_u_ar / u_hat_ar)\n",
-    "        v_rel_diff = np.nanmax(delta_v_ar / v_hat_ar)\n",
+    "        u_rel_diff = np.nanmax(np.abs(delta_u_ar / u_hat_ar))\n",
+    "        v_rel_diff = np.nanmax(np.abs(delta_v_ar / v_hat_ar))\n",
     "\n",
     "        newton_raphson_display_text.update(\"Newton-Raphson step: {}, u_rel_diff: {:.2e}, v_rel_diff: {:.2e}, F_u_ar: {:.2e}, F_v_ar: {:.2e}\".format(\n",
     "            newton_raphson_iter,\n",
     "            u_rel_diff,\n",
     "            v_rel_diff,\n",
-    "            F_u_ar.max(),\n",
-    "            F_v_ar.max()\n",
+    "            np.abs(F_u_ar).max(),\n",
+    "            np.abs(F_v_ar).max()\n",
     "        ))\n",
     "\n",
     "\n",
     "        # Update the guess of the displacement and velocity fields\n",
-    "        u_hat_ar += delta_u_ar\n",
-    "        v_hat_ar += delta_v_ar\n",
+    "        u_hat_ar = u_hat_ar + delta_u_ar\n",
+    "        v_hat_ar = v_hat_ar + delta_v_ar\n",
     "\n",
     "        # Check if the relative difference is small enough\n",
-    "        if (u_rel_diff < rtol) and (v_rel_diff < rtol):\n",
+    "        if ((u_rel_diff < rtol) and (v_rel_diff < rtol)) or \\\n",
+    "            (np.abs(F_u_ar).max() < atol and np.abs(F_v_ar).max() < atol):\n",
     "            return u_hat_ar, v_hat_ar\n",
     "\n",
     "\n",
@@ -1267,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,22 +1315,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Backward Euler iter: 0'"
+       "'Backward Euler iter: 2'"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strain density energy: 1.70e+06\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'Newton-Raphson step: 7.00e+00, u_rel_diff: 1.62e+00, v_rel_diff: 1.51e+02, F_u_ar: 4.33e-16, F_v_ar: 4.48e-02'"
+       "'Newton-Raphson step: 5, u_rel_diff: 3.51e-16, v_rel_diff: 0.00e+00, F_u_ar: 3.28e+04, F_v_ar: 1.80e+308'"
       ]
      },
      "metadata": {},
@@ -1322,16 +1347,61 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_16338/2029504858.py:181: RuntimeWarning: divide by zero encountered in divide\n",
-      "  u_rel_diff = np.nanmax(delta_u_ar / u_hat_ar)\n",
-      "/tmp/ipykernel_16338/2029504858.py:182: RuntimeWarning: divide by zero encountered in divide\n",
-      "  v_rel_diff = np.nanmax(delta_v_ar / v_hat_ar)\n"
+      "/tmp/ipykernel_46525/2176085259.py:194: RuntimeWarning: divide by zero encountered in divide\n",
+      "  u_rel_diff = np.nanmax(np.abs(delta_u_ar / u_hat_ar))\n",
+      "/tmp/ipykernel_46525/2176085259.py:195: RuntimeWarning: divide by zero encountered in divide\n",
+      "  v_rel_diff = np.nanmax(np.abs(delta_v_ar / v_hat_ar))\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max change in displacement: 6.06e+42\n",
+      "Strain density energy: inf\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Newton-Raphson step: 0, u_rel_diff: 1.11e-16, v_rel_diff: 0.00e+00, F_u_ar: 2.50e-01, F_v_ar: 1.80e+308'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x7f03015e38b0>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/steve/Documents/Miscellaneous/FEM/fem_env/lib/python3.10/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
+      "    def _clean_thread_parent_frames(\n",
+      "KeyboardInterrupt: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max change in displacement: 6.06e+42\n",
+      "Strain density energy: inf\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Newton-Raphson step: 0'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Run the simulation in this loop\n",
-    "time_step = 1e2\n",
+    "time_step = 1e-6\n",
     "\n",
     "# The maximum number of iterations\n",
     "n_iterations = 1000\n",
@@ -1350,6 +1420,20 @@
     "\n",
     "    backward_euler_display_text.update(f\"Backward Euler iter: {iter}\")\n",
     "\n",
+    "    u_old_ar = u_ar.copy()\n",
+    "\n",
+    "    # Compute the strain density energy function\n",
+    "    strain_density_energy = compressible_neo_hookean_strain_density_energy_func(\n",
+    "        u_ar,\n",
+    "        ref_point_ar, \n",
+    "        ref_volume_ar, \n",
+    "        D, \n",
+    "        C1, \n",
+    "        C2\n",
+    "    )\n",
+    "\n",
+    "    print(\"Strain density energy: {:.2e}\".format(strain_density_energy))\n",
+    "\n",
     "    # Perform the implicit backward Euler integration step\n",
     "    u_ar, v_ar = compute_implicit_backward_euler_integration_step(\n",
     "        u_ar,\n",
@@ -1358,57 +1442,34 @@
     "        internal_forces_func,\n",
     "        jac_internal_forces_func,\n",
     "        global_mass_matrix,\n",
-    "        rtol = 1e-6,\n",
+    "        rtol = 1e-2,\n",
+    "        atol = 1e-14,\n",
     "        max_iter = 100\n",
     "    )\n",
     "\n",
-    "    # Save the mesh to a file\n",
-    "    if(iter % 10 == 0):\n",
+    "    max_change = np.max(np.abs(u_ar - u_old_ar))\n",
     "\n",
-    "        # Compute the positions of the points in the deformed configuration\n",
-    "        def_point_ar = point_ar + u_ar.reshape(-1, 3)\n",
-    " \n",
-    "        def_u_grid = convert_mesh_to_ugrid(def_point_ar, cell_ar)\n",
-    "        pv_def_mesh = pv.wrap(def_u_grid)\n",
-    "        pv_def_mesh.save(f\"deformed_mesh_{iter}.vtu\")\n",
+    "\n",
+    "\n",
+    "    print(\"Max change in displacement: {:.2e}\".format(max_change))\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # Compute the positions of the points in the deformed configuration\n",
+    "    def_point_ar = ref_point_ar + u_ar.reshape(-1, 3)\n",
+    "    def_u_grid = convert_mesh_to_ugrid(def_point_ar, cell_ar)\n",
+    "    pv_def_mesh = pv.wrap(def_u_grid)\n",
+    "    pv_def_mesh.save(f\"deformed_mesh_{iter}.vtu\")\n",
     "\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Updated text: Variable value is 4'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import time \n",
-    "\n",
-    "# Create an initial display\n",
-    "display_text = display(\"Initial text\", display_id=True)\n",
-    "\n",
-    "# Simulate updating the text as variables are computed\n",
-    "for i in range(5):\n",
-    "\n",
-    "    for j in range(3):\n",
-    "\n",
-    "\n",
-    "\n",
-    "        \n",
-    "\n",
-    "    time.sleep(1)  # Simulate a computation or delay\n",
-    "    clear_output(wait=True)  # Clear the previous output\n",
-    "    display_text.update(f\"Updated text: Variable value is {i}\")"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
